--- a/src/index.css
+++ b/src/index.css
@@ -259,13 +259,13 @@ code {
   .Content h2 {
     font-size: 1.5em;
     color: #3ab09e;
-    font-family: cursive;
+    font-family: "Times New Roman", Times, serif;
   }
 
   .Content h1 {
     font-size: 2em;
     color: #3ab09e;
-    font-family: cursive;
+    font-family: "Times New Roman", Times, serif;
     /* margin-bottom: 50%; */
 
     /* font-family: open-sans;
@@ -352,7 +352,7 @@ code {
   }
 
   .content-body {
-    font-family: cursive;
+    font-family: "Times New Roman", Times, serif;
     text-align: center;
     margin-bottom: 30%;
     /* Adjust spacing, font sizes, and other styles as needed */
